--- a/main.html
+++ b/main.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<div class="hero">
+	    <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image">
+	    <div class="content">
+	        <h1>Welcome to Our Site</h1>
+	        <p>Discover amazing ideas and inspiration.</p>
+	        <a href="#" class="explore-btn">Explore Now</a>
+	    </div>
+	</div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
